Fix pre styling on mobile

--- a/themes/paweljw/assets/style.scss
+++ b/themes/paweljw/assets/style.scss
@@ -242,3 +242,7 @@ a.button:hover {
     text-align: center;
   }
 }
+
+pre {
+  overflow: auto;
+}
